--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Corkboard</title>
         <link rel="stylesheet" href="/static/style.css" type="text/css">
+        <script src="/static/sjcl.js" type="text/javascript"></script>
         <script src="/static/submit.js" type="text/javascript"></script>
     </head>
     <body>
