--- a/templates/note.html
+++ b/templates/note.html
@@ -3,11 +3,13 @@
     <head>
         <title>{{ .Title }}</title>
         <link rel="stylesheet" href="/static/style.css">
+        <script src="/static/delete.js"></script>
     </head>
     <body>
         <h1>{{ .Title }}</h1>
 <pre>
 {{ .Body }}
 </pre>
+        <button id="delete">Delete</button>
     </body>
 </html>
