Changed 'Title' to 'URL'

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         <h1>Corkboard</h1>
         <form>
             <textarea id="body" name="body" placeholder="Write your note here."></textarea><br>
-            <label for="title">Title:</label><br>
+            <label for="title">URL:</label><br>
             <input type="title" id="title" name="title"><br>
             <input type="submit" value="Submit" id="submit" name="submit">
             <span id="status"></span>
