--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,14 @@
     <head>
         <title>Corkboard</title>
         <link rel="stylesheet" href="/static/style.css" type="text/css">
-        <script src="/static/submit.js" type="text/javascript"></script>
+        <script src="/static/index.js" type="text/javascript"></script>
     </head>
     <body>
         <h1>Corkboard</h1>
         <form>
             <textarea id="body" name="body" placeholder="Write your note here."></textarea><br>
             <label for="title">URL:</label><br>
-            <input type="title" id="title" name="title"><br>
+            <input type="title" id="title" name="title">&nbsp;
             <input type="submit" value="Submit" id="submit" name="submit">
             <span id="status"></span>
         </form> 
