--- a/templates/note.html
+++ b/templates/note.html
@@ -3,13 +3,14 @@
     <head>
         <title>{{ .Title }}</title>
         <link rel="stylesheet" href="/static/style.css">
-        <script src="/static/delete.js"></script>
+        <script src="/static/note.js"></script>
     </head>
     <body>
         <h1>{{ .Title }}</h1>
-<pre>
+        <button id="copy">Copy</button>
+        <button id="delete">Delete</button>
+<pre id="note">
 {{ .Body }}
 </pre>
-        <button id="delete">Delete</button>
     </body>
 </html>
