Fixed bug that came from changing api endpoints
The buttons wouldn't work cuz they were pointing at the wrong places

--- a/templates/note.html
+++ b/templates/note.html
@@ -6,7 +6,7 @@
         <script src="/static/note.js"></script>
     </head>
     <body>
-        <h1>{{ .Title }}</h1>
+        <h1 id="noteName">{{ .Title }}</h1>
         <button id="copy">Copy</button>
         <button id="delete">Delete</button>
 <pre id="note">
