--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,7 @@ body {
     margin: 40px auto;
     max-width: 650px;
     line-height: 1.6;
-    font-size: 16px;
+    font-size: 1.2em;
     color: #444;
     padding: 0 10px;
 }
@@ -18,4 +18,5 @@ pre {
 textarea {
     width: 500px;
     height: 200px;
+    font-size: inherit;
 }
